MDEV-22446 InnoDB aborts while adding instant column for discarded tablespace

- Instant alter should change the metadata alone when table is
discarded. It shouldn't try to add metadata record in clustered index.
Also make the clustered index to non-instant format.